# nexfitra

./: .env-template  .gitignore  README.md  config.py  deploy.ps1  docker-compose.yaml  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt  run.py  run_tests.py  setup_db.sh  setup_db_test.sh  take-down.ps1
airflow_app/: Dockerfile-airflow  Dockerfile-airflow-test  entrypoint.sh  entrypoint_test.sh  pyproject.toml
airflow_app/dags/: example_dag.py  usda_data_dag.py
airflow_app/tests/: test_app.py
app/: Dockerfile  __init__.py  config.py  decorators.py  forms.py  models.py  routes.py  run-migrations.sh  run.py  scheduler.py
app/static/: styles.css
app/templates/: account.html  base.html  home.html  login.html  login_activity.html  mfa.html  privacy_policy.html  register.html  reset_request.html  reset_token.html  setup_mfa.html  terms_of_service.html  verify_mfa.html
app/templates/email/: change_email.html
docs/: development-plan.md  development-report.md  setup.md
docs/development/: development-plan.md  development-report.md  development-setup-report.md  setup.md
fastapi_app/: Dockerfile-fastapi  Dockerfile-fastapi-test  app.py  pyproject.toml
fastapi_app/tests/: test_app.py
flask_app/: Dockerfile-flask  Dockerfile-flask-test  app.py  pyproject.toml
flask_app/tests/: test_app.py
logs/: nexfitra.log.1
migrations/versions/: 086c85c86010_ensure_default_value_for_failed_login_.py  38f7be239fb8_initial_migration.py  3d9415d37f70_add_skip_mfa.py  7dc42cb9beef_add_mfa.py  8c0f54c50e71_initial_migration.py  a0234cbde983_add_email_change_pending_to_user_model.py  a2aa94fd9b84_add_loginactivity_table.py  abe6e9189cd7_add_timezone_aware_date_registered.py  af9ce18993f0_add_login_activity.py  b32ff24ba6d1_add_email_verification_reminders.py  b7bea4135986_add_timezone_aware_date_registered.py  cad28546d3bf_add_fields_for_account_lockout_mechanism.py  ec98c8176428_add_email_verification.py  eef8ec2ee5d0_update_project_structure.py
react_app/: Dockerfile-react  package-lock.json
scripts/: init-db.sh
tests/: test_app.py
usda_db/init-scripts/: init-db.sh
