[tool.poetry]
name = "nexfitra-airflow"
version = "0.1.0"
description = "Airflow setup for pulling data from USDA API to Flask database"
authors = ["Sean Deery <sean@nexfitra.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"  # Downgrade to Python 3.11 to ensure compatibility with Airflow 2.10.x
apache-airflow = "^2.10.0"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
cryptography = "^41.0.3"
sqlalchemy = ">=1.4.36,<2.0"

# Optional extras for Airflow. Uncomment if needed.
# apache-airflow[postgres] = "^2.10.0"  # Adds Postgres-specific dependencies to Airflow
# apache-airflow[cncf.kubernetes] = "^2.10.0"  # Kubernetes provider for Airflow

[tool.poetry.extras]
# Optional extras if needed, e.g., depending on specific use cases
# aws = ["apache-airflow[amazon]"]
# gcp = ["apache-airflow[gcp]"]

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
